deploy/ingress/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle-ingress-lb
spec:
  selector:
    app: nginx-ingress
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: LoadBalancer
